# mini-micro-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  gateway.toml  klines-tools.toml  quote-ingester.toml
crates/indicators/: Cargo.toml  README.md
crates/indicators/src/: adx.rs  atr.rs  boll.rs  donchian.rs  lib.rs  ma.rs  macd.rs  percentile.rs  price_structure.rs  rsi.rs  types.rs  vol_ratio.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
migrations/: 202606210001_create_klines.sql
services/app-api/: Cargo.toml  README.md  app-api.example.toml
services/app-api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  market.rs  store.rs
services/gateway/: Cargo.toml  gateway.example.toml
services/gateway/migrations/: 0001_create_users.sql
services/gateway/src/: app.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs  models.rs  proxy.rs  store.rs  wechat.rs
services/klines-tools/: Cargo.toml  README.md  klines-tools.example.toml
services/klines-tools/src/: analyzer.rs  confidence.rs  config.rs  data_validator.rs  grid_plan.rs  kline_reader.rs  lib.rs  main.rs  models.rs  multi_tf.rs  output.rs  risk.rs  scoring.rs  signal.rs  state_machine.rs  state_store.rs
services/quote-ingester/: Cargo.toml  README.md
services/quote-ingester/src/: aggregate.rs  api.rs  config.rs  lib.rs  main.rs  models.rs  store.rs  worker.rs
指标分析docs/: IMPLEMENTATION_PLAN.zh-CN.md  SPEC.zh-CN.md
