[package]
name = "klines-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
indicators = { path = "../../crates/indicators" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
